# LogTools

./: README.md  pyproject.toml
src/wk_logtool/coarsen/: aggregator.py  cli.py  levels.py
src/wk_logtool/common/: cli_io.py  text_encoding.py
src/wk_logtool/logts_tag/: cli.py  tagger.py
src/wk_logtool/retime/: cli.py  patterns.py
tests/: test_coarsen.py  test_logts_tag.py  test_retime.py
